feat(database): add secondary key reference lookups
- LookupProvider: add coalesced secondary key to identifier lookups,
  stop using coalesced keys for Redis reads, and query all-values from
  local cache plus database only
- EntityHolder: add synchronous and asynchronous secondary key entity
  lookups through identifier resolution, remove the direct existence
  helper, and align id storage types with reference-aware storages
- LocalEntityReferenceIdStorage: add a local secondary key cache that
  store identifiers instead of duplicate entity copies
- RedisEntityReferenceIdStorage: add a Redis secondary key cache that
  serialize identifiers and index entities by derived keys
- LocalStorage and RedisStorage: split stored value type from indexed
  entity type, add key normalization support, and handle bounded local
  eviction plus chunked Redis namespace reads and corrupt entry eviction
- CacheEntry: track expiry with monotonic nano time instead of wall
  clock time
- RedisDriver: return command futures from async resource access, guard
  repeated connect and pubsub setup, clear subscribers on disconnect,
  and isolate subscriber failures during dispatch
- README: document reference storages, two-leg lookups, revised storage
  generics, local size caps, and Redis driver async and pubsub behavior